Fk j17 module